--- a/frontend/avaliacaods/package.json
+++ b/frontend/avaliacaods/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^19.0.0",
     "angular-material-icons": "^0.7.1",
     "bootstrap": "^5.3.6",
+    "ngx-cookie-service": "^19.1.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
